# maple-guild-manage

./: README.md  docker-compose.yaml  pyproject.toml  run_test.sh
e2e/mysql/: init.sql
maple_guild_manage_api_server/: __main__.py  errors.py
maple_guild_manage_api_server/base/: base_db_client.py  base_model.py
maple_guild_manage_api_server/model/: roi_extractor_model.py
maple_guild_manage_api_server/server/: dataplane.py  protocol.py  server.py
script/: test_call.sh
test/model_test/: roi_extractor_model_test.py
test/server/: protocol_test.py
