[tool.poetry]
name = "maple-guild-manage-api-server"
version = "0.1.0"
description = ""
authors = ["changsu lee <leecs0503@naver.com>"]
readme = "README.md"
packages = [{include = "maple_guild_manage_api_server"}]

[tool.poetry.dependencies]
python = "^3.9"
pymysql = "^1.0.3"
fastapi = "^0.103.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
